# r3live

./: README.md
r3live/: CMakeLists.txt  package.xml
r3live/launch/: r3live_bag.launch  r3live_bag_ouster.launch  r3live_reconstruct_mesh.launch
r3live/src/: r3live.cpp  r3live.hpp  r3live_lio.cpp  r3live_reconstruct_mesh.cpp  r3live_vio.cpp
r3live/src/loam/: IMU_Processing.cpp  IMU_Processing.hpp  LiDAR_front_end.cpp
r3live/src/loam/include/: common_lib.h  so3_math.h
r3live/src/loam/include/FOV_Checker/: FOV_Checker.cpp  FOV_Checker.h
r3live/src/loam/include/kd_tree/: ikd_Tree.cpp  ikd_Tree.h
r3live/src/meshing/: build_mesh.hpp
r3live/src/meshing/MVS/: Common.h  Image.h  Mesh.cpp  Mesh.h  OBJ.cpp  OBJ.h  PLY.cpp  PLY.h  PointCloud.cpp
r3live/src/meshing/MVS/Common/: Common.h  Log.h  Types.h  Types.inl
r3live/src/meshing/vcg/complex/: all_types.h  allocate.h  append.h  base.h  complex.h  exception.h  used_types.h
r3live/src/meshing/vcg/complex/algorithms/: attribute_seam.h  autoalign_4pcs.h  bitquad_creation.h  bitquad_optimization.h  bitquad_support.h  clean.h  clip.h  closest.h  clustering.h  crease_cut.h  cylinder_clipping.h  edge_collapse.h  geodesic.h  halfedge_quad_clean.h  harmonic.h  hole.h  inertia.h  inside.h  intersection.h  local_optimization.h  nring.h  outline_support.h  overlap_estimation.h  point_sampling.h  pointcloud_normal.h  polygon_polychord_collapse.h  polygon_support.h  refine.h  refine_loop.h  smooth.h  stat.h  symmetry.h  textcoord_optimization.h  voronoi_processing.h
r3live/src/meshing/vcg/connectors/: halfedge_pos.h  hedge.h  hedge_component.h
r3live/src/meshing/vcg/container/: container_allocation_table.h  derivation_chain.h  entries_allocation_table.h  simple_temporary_data.h  vector_occ.h
r3live/src/meshing/vcg/math/: base.h  camera.h  disjoint_set.h  eigen.h  eigen_matrix_addons.h  eigen_matrixbase_addons.h  factorial.h  gen_normal.h  histogram.h  legendre.h  linear.h  matrix33.h  matrix44.h  old_deprecated_matrix.h  old_lin_algebra.h  old_matrix.h  old_matrix33.h  old_matrix44.h  perlin_noise.h  polar_decomposition.h  quadric.h  quadric5.h  quaternion.h  random_generator.h  shot.h  similarity.h  similarity2.h  spherical_harmonics.h
r3live/src/meshing/vcg/simplex/edge/: base.h  component.h  distance.h  pos.h  topology.h
r3live/src/meshing/vcg/simplex/face/: base.h  component.h  component_ep.h  component_occ.h  component_ocf.h  component_polygon.h  distance.h  jumping_pos.h  pos.h  topology.h
r3live/src/meshing/vcg/simplex/tetrahedron/: base.h  component.h  pos.h  tetrahedron.h
r3live/src/meshing/vcg/simplex/vertex/: base.h  component.h  component_occ.h  component_ocf.h  component_sph.h  distance.h
r3live/src/meshing/vcg/space/: box.h  box2.h  box3.h  color4.h  colorspace.h  deprecated_point.h  deprecated_point2.h  deprecated_point3.h  deprecated_point4.h  distance2.h  distance3.h  fitting3.h  intersection2.h  intersection3.h  line2.h  line3.h  obox3.h  outline2_packer.h  planar_polygon_tessellation.h  plane3.h  point.h  point2.h  point3.h  point4.h  point_matching.h  rasterized_outline2_packer.h  ray2.h  ray3.h  rect_packer.h  segment2.h  segment3.h  smallest_enclosing.h  space.h  sphere3.h  tetra3.h  texcoord2.h  triangle2.h  triangle3.h
r3live/src/meshing/vcg/space/index/: base.h  grid_closest.h  grid_static_obj.h  grid_static_ptr.h  grid_util.h  octree.h  octree_template.h  perfect_spatial_hashing.h  space_iterators.h  spatial_hashing.h
r3live/src/meshing/vcg/space/intersection/: predicates.h  triangle_triangle3.h
r3live/src/meshing/vcg/wrap/: callback.h  utils.h
r3live/src/meshing/vcg/wrap/bmt/: bmt.cpp  bmt.h  strip_mesh.h
r3live/src/meshing/vcg/wrap/dae/: colladaformat.h  poly_triangulator.h  util_dae.h  xmldocumentmanaging.cpp  xmldocumentmanaging.h
r3live/src/meshing/vcg/wrap/gcache/: cache.h  controller.h  dheap.h  door.h  provider.h  token.h
r3live/src/meshing/vcg/wrap/gl/: addons.h  camera.h  deprecated_math.h  deprecated_space.h  fbo.h  gl_field.h  gl_geometry.h  gl_object.h  gl_surface.h  glu_tesselator.h  glu_tessellator_cap.h  math.h  pick.h  picking.h  pos.h  shaders.h  shot.h  space.h  tetramesh.h  trimesh.h
r3live/src/meshing/vcg/wrap/glw/: bookkeeping.h  buffer.h  common.h  config.h  context.h  fragmentshader.h  framebuffer.h  geometryshader.h  glheaders.h  glw.h  noncopyable.h  object.h  objectdeleter.h  program.h  renderable.h  renderbuffer.h  shader.h  texture.h  texture2d.h  texturecube.h  type.h  utility.h  vertexshader.h
r3live/src/meshing/vcg/wrap/gui/: activecoordinateframe.cpp  activecoordinateframe.h  coordinateframe.cpp  coordinateframe.h  frustum.h  rubberband.cpp  rubberband.h  trackball.cpp  trackball.h  trackmode.cpp  trackmode.h  trackrecorder.h  trackutils.h  view.h
r3live/src/meshing/vcg/wrap/io_edgemesh/: export_dxf.h  export_svg.h
r3live/src/meshing/vcg/wrap/io_tetramesh/: export_ply.h  export_ts.h  import_ply.h  import_ts.h  io_ply.h
r3live/src/meshing/vcg/wrap/io_trimesh/: additionalinfo.h  export.h  export_3ds.h  export_ctm.h  export_dae.h  export_dxf.h  export_fbx.h  export_field.h  export_gts.h  export_idtf.h  export_iv.h  export_obj.h  export_off.h  export_ply.h  export_smf.h  export_stl.h  export_u3d.h  export_vmi.h  export_vrml.h  how_to_write_an_io_filter.txt  import.h  import_asc.h  import_ctm.h  import_dae.h  import_fbx.h  import_field.h  import_nvm.h  io_mask.h  (+12 more)
r3live/src/optical_flow/: lkpyramid.cpp  lkpyramid.hpp
r3live/src/rgb_map/: image_frame.cpp  image_frame.hpp  offline_map_recorder.cpp  offline_map_recorder.hpp  pointcloud_rgbd.cpp  pointcloud_rgbd.hpp  rgbmap_tracker.cpp  rgbmap_tracker.hpp
r3live/src/tools/: common_tools.h  os_compatible.hpp  test_timer.cpp  tools_angleaxis_ad.h  tools_ceres.hpp  tools_color_printf.hpp  tools_data_io.hpp  tools_eigen.hpp  tools_kd_hash.hpp  tools_logger.hpp  tools_mem_used.h  tools_openCV_3_to_4.hpp  tools_random.hpp  tools_ros.hpp  tools_serialization.hpp  tools_thread_pool.hpp  tools_timer.hpp
r3live/src/tools/lib_sophus/: local_parameterization_se3.hpp  local_parameterization_split_se3.hpp
(+113 files in other folders)
